[project]
name = "agent-tutorial-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.12.1",
    "fastmcp>=0.9.0",
    "httpx>=0.27.0",
    "langchain>=1.2.6",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
]
