[project]
name = "agent-tutorial-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen>=0.10.5",
    "fastmcp>=0.9.0",
    "httpx>=0.27.0",
    "langchain>=1.2.6",
    "langchain-text-splitters>=0.3.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "semantic-kernel>=1.36.0",
    "langchain-chroma>=1.1.0",
]

[[tool.uv.index]]
name = "pypi-cn"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
